base/service.yaml
# This exposes your deployment inside the cluster.
apiVersion: v1
kind: Service
metadata:
  name: php-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: php-app
